--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>.body{ margin: 0px; padding: 0px }</style>
+    <style>.body{ margin: 0px; padding: 0px; }</style>
   </head>
   <body class="body">
     <noscript>
