--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>.body{ margin: 0px; padding: 0px; }</style>
+    <style>.body{ margin: 0px; padding: 0px; font-family: "Montserrat"; }</style>
   </head>
   <body class="body">
     <noscript>
