continue working on categories, create api for adding categories

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>.body{ margin: 0px; padding: 0px; font-family: "Montserrat"; }</style>
+    <style>
+      .body{  margin: 0px; padding: 0px; font-family: "Montserrat"; };
+    </style>
   </head>
   <body class="body">
     <noscript>
