--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,11 +13,18 @@
       .body{  margin: 0px; padding: 0px; font-family: "Montserrat"; };
     </style>
   </head>
-  <body class="body">
+  <body class="body" onload="handleRedirect()">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      function handleRedirect() {
+        if (location.protocol !== 'https:') {
+          location.protocol = 'https:';          
+        }
+      }
+    </script>
   </body>
 </html>
