--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
     </style>
   </head>
   <body class="body" onload="handleRedirect()">
+    <div>lets just put this here</div>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
@@ -21,7 +22,8 @@
     <!-- built files will be auto injected -->
     <script>
       function handleRedirect() {
-        if (location.protocol !== 'https:') {
+        if (location.protocol !== 'https:' && location.href !== 'http://localhost:8080') {
+          console.log('handleRedirect')
           location.protocol = 'https:';          
         }
       }
