--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      if (location.protocol !== 'https:' && location.hostname !== 'localhost') {
+        location.protocol = 'https:';          
+      }
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -13,20 +18,14 @@
       .body{  margin: 0px; padding: 0px; font-family: "Montserrat"; };
     </style>
   </head>
-  <body class="body" onload="handleRedirect()">
-    <div>lets just put this here</div>
+  <body class="body">
+    <script>
+      console.log('body loaded');
+    </script>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script>
-      function handleRedirect() {
-        if (location.protocol !== 'https:' && location.href !== 'http://localhost:8080') {
-          console.log('handleRedirect')
-          location.protocol = 'https:';          
-        }
-      }
-    </script>
   </body>
 </html>
