--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <title>fo sho</title>
     <style>
       .body{  margin: 0px; padding: 0px; font-family: "Montserrat"; };
-    </style>
+    </style>y
   </head>
   <body class="body">
     <script>
