--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,13 +15,17 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>fo sho</title>
     <style>
-      .body{  margin: 0px; padding: 0px; font-family: "Montserrat"; };
-    </style>y
+      body {  
+        margin: 0px;
+        padding: 0px;
+        width: 100vw;
+        height: 100vh;
+        font-family: "Montserrat";
+      };
+
+    </style>
   </head>
   <body class="body">
-    <script>
-      console.log('body loaded');
-    </script>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
