Some css refactoring Category bugfix Console logs to diagnose date bug

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,17 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>fo sho</title>
     <style>
-      body {  
+      body {
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -moz-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        flex-direction: column;
         margin: 0px;
         padding: 0px;
         width: 100vw;
