--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html><html lang=en><head><script>if (location.protocol !== 'https:' && location.hostname !== 'localhost') {
         location.protocol = 'https:';          
-      }</script><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link href="https://fonts.googleapis.com/css?family=Montserrat" rel=stylesheet><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=icon href=/favicon.ico type=image/x-icon><title>fo sho</title><style>body {  
+      }</script><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link href="https://fonts.googleapis.com/css?family=Montserrat" rel=stylesheet><link rel="shortcut icon" href=/favicon.ico type=image/x-icon><link rel=icon href=/favicon.ico type=image/x-icon><title>fo sho</title><style>body {
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -moz-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -moz-box-direction: normal;
+        flex-direction: column;
         margin: 0px;
         padding: 0px;
         width: 100vw;
         height: 100vh;
         font-family: "Montserrat";
-      };</style><link href=/css/app.08d24aeb.css rel=preload as=style><link href=/js/app.e7b84e79.js rel=preload as=script><link href=/js/chunk-vendors.717f0709.js rel=preload as=script><link href=/css/app.08d24aeb.css rel=stylesheet></head><body class=body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.717f0709.js></script><script src=/js/app.e7b84e79.js></script></body></html>
+      };</style><link href=/css/app.4cc0a8f3.css rel=preload as=style><link href=/js/app.01bd464a.js rel=preload as=script><link href=/js/chunk-vendors.717f0709.js rel=preload as=script><link href=/css/app.4cc0a8f3.css rel=stylesheet></head><body class=body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.717f0709.js></script><script src=/js/app.01bd464a.js></script></body></html>
